--- a/CSS-Grid-Layout-Practice/Alura-store/assets/css/style.css
+++ b/CSS-Grid-Layout-Practice/Alura-store/assets/css/style.css
@@ -3,23 +3,32 @@
     font-family: Arial, Helvetica, sans-serif;
     display: grid;
     grid-template-areas: 
-    "encabezado"
-    "contenido"
-    "rodapie";
+        "encabezado"
+        "contenido"
+        "rodapie";
     grid-template-columns: auto;
-    grid-template-rows: 50px 100vh auto;
+    grid-template-rows: 50px auto auto;
 }
-
 .encabezado {
-    background-color: lavender;
+    align-items: center;
+    display: flex;
     grid-area: encabezado;
+    padding: 0 2rem;    
+}
+.menu{
+    color: #333333;
+    padding: .5rem 1rem;
+}
+.menu__link:hover, .menu__link:active{
+    border-bottom: 2px solid #0073e6;
 }
 .contenido {
-    background-color: lightblue;
     grid-area: contenido;
 }
-
 .rodapie { 
-    background-color: salmon;
+    background: #fdfdfd;
+    color: #333333;
     grid-area: rodapie;
+    padding: 1rem;
+    text-align: center;
 }
